--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -1,7 +1,17 @@
 header {
     background-color: darkgrey;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 header p {
     margin-top: 0px;
+    flex-grow: 2;
+}
+
+header img {
+    max-width: 200px;
+    
 }
