--- a/client/src/Pages/Homepage/homepage.css
+++ b/client/src/Pages/Homepage/homepage.css
@@ -1,12 +1,48 @@
 main {
-    height: 100%;
+    height: 100vh;
     text-align: center;
-
-    padding-top: 20vh;
-    padding-bottom: 40vh;
-    background-color: grey;
+    background-color: rgb(148, 149, 156);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 main h1 {
-    font-size: 50px;
+    font-size: 8vh;
+    color: #3A3939
+}
+
+main img {
+    height: 40vh;
+    width: auto;
+    
+}
+
+main div#lobbyOptions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 30vw;
+    row-gap: 2vh;
+}
+
+main div#lobbyOptions button {
+    color: white;
+    border-radius: 1vw;
+    background: #5E5E5E;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    width: 80%;
+    height: 5vh;
+    font-size: 3vh;
+}
+
+main div#lobbyOptions input {
+    border-radius: 1vw;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    width: 100%;
+    height: 5vh;
+    font-size: 3vh;
+    text-align: center;
 }
