Added gamepage styling

--- a/client/src/Pages/Gamepage/gamepage.css
+++ b/client/src/Pages/Gamepage/gamepage.css
@@ -2,6 +2,10 @@ div#chess-game {
     text-align: center;
 }
 
+div#chess-game {
+    text-align: center;
+}
+
 div#waiting {
     position: absolute;
     top: 50vh;
