--- a/client/src/components/Board/board.css
+++ b/client/src/components/Board/board.css
@@ -2,3 +2,17 @@
     color: red;
     /* transform: rotate(3.142rad); */
 }
+
+#gameEnding {
+    position: absolute;
+    top: 50vh;
+    /* left: 50%; */
+    width: 200px;
+    height: 100px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    text-align: center;
+    padding: 20px;
+    z-index: 1;
+    display: none;
+}
