Displays erros for creating/joining lobbys with bad ids

--- a/client/src/Pages/Homepage/homepage.css
+++ b/client/src/Pages/Homepage/homepage.css
@@ -46,3 +46,9 @@ main div#lobbyOptions input {
     font-size: 3vh;
     text-align: center;
 }
+
+p#displayMessage {
+    color: darkred;
+    font-weight: 700;
+    margin: 0px
+}
