race game score

--- a/client/src/Pages/Gamepage/gamepage.css
+++ b/client/src/Pages/Gamepage/gamepage.css
@@ -20,6 +20,15 @@ div#waiting {
     z-index: 6;
 }
 
+canvas {
+    display: block;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 svg {
     /* transform: rotate(3.142rad); */
 }
