--- a/client/src/Pages/Gamepage/gamepage.css
+++ b/client/src/Pages/Gamepage/gamepage.css
@@ -4,8 +4,8 @@ div#chess-game {
 
 div#chess-game {
     text-align: center;
-    width: 50vw;
-    margin: auto;
+    /* width: 50vw; */
+    /* margin: auto; */
     margin-top: 10px;
 }
 
