--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -1,17 +1,35 @@
 header {
-    background-color: darkgrey;
+    background-color: rgb(49, 49, 53);
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
+    /* padding: 10px 0px; */
+    text-align: center;
 }
 
-header p {
-    margin-top: 0px;
+header h1 {    
+    margin: 0;
     flex-grow: 2;
+    font-size: 4.5vw;
+    /* padding: 15px; */
 }
 
 header img {
     max-width: 200px;
-    
+    float: left;
+    margin: 1vw;
 }
+
+/* .center {
+    transform: translate(-120px, 0%);
+    width: 50%;  
+    margin: auto;  
+
+}
+  
+.left {
+    align-self: left;
+    margin-left: 20px;
+} */
