--- a/client/src/components/Timer/timer.css
+++ b/client/src/components/Timer/timer.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 36px;
+    font-size: 80px;
     font-weight: bold;
     color: #333;
     background-color: rgba(200, 200, 200, 0.3);
@@ -11,6 +11,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    margin-right: 1vw;
 }
 
 #timer p {
